--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
+    "react-chartjs-2": "^2.11.1",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.2",
