--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "formik": "^2.2.6",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "luxon": "^1.26.0",
     "node-sass": "^5.0.0",
     "popper.js": "^1.16.1",
