--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.1.0",
     "formik": "^2.2.6",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
