--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux-logger": "^3.0.6",
+    "styled-components": "^5.2.3",
     "swr": "^0.5.5",
     "web-vitals": "^1.1.0",
     "yup": "^0.32.9"
